--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gautham Sai Swaroop",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
